<resources>
    <string name="app_name">Iottive App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enterEmailId">Enter Email Id</string>
    <string name="enterPassword">Enter Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="productDetail">ProductDetail</string>
    <string name="noInternetAvailable">no internet available</string>
    <string name="orderid">OrderId</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="noOfProduct">No Of Product</string>
    <string name="productName">Product Name</string>
    <string name="productId">Product Id</string>
    <string name="price">Price</string>
    <string name="count">Count</string>
</resources>