<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.myapplication.viewmodel.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <View
            android:id="@+id/viewTop"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/bg_top_view"
            app:layout_constraintBottom_toBottomOf="@id/guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/Text.20sp.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:layout_marginBottom="@dimen/dimen48dp"
            android:gravity="center"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:text="@string/enterEmailId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideLine" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:background="@drawable/bg_edittext"
            android:padding="@dimen/dimen10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassword"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:text="@string/enterPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:background="@drawable/bg_edittext"
            android:padding="@dimen/dimen10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/Text.14sp.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:background="@drawable/bg_login_button"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{viewModel.isLoading()?View.VISIBLE: View.GONE}"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideLine"
            app:layout_constraintBottom_toBottomOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideLine"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>