<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.myapplication.viewmodel.ProductDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <View
            android:id="@+id/viewTop"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/bg_top_view"
            app:layout_constraintBottom_toBottomOf="@id/guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.17" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/Text.20sp.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:layout_marginBottom="@dimen/dimen32dp"
            android:gravity="center"
            android:text="@{viewModel.productName}"
            app:layout_constraintBottom_toTopOf="@id/guideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProduct"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginStart="@dimen/dimen8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideLine"  />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProductName"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:text="@string/productName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivProduct" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProductNameValue"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:text="@{viewModel.productName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductName" />

        <View
            android:id="@+id/viewProductName"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorText"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductNameValue"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProductId"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:text="@string/productId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewProductName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvProductIdValue"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.productId}"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductId" />

        <View
            android:id="@+id/viewProductId"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorText"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductIdValue"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewProductId" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPriceValue"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.price}"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrice" />

        <View
            android:id="@+id/viewPrice"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorText"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPriceValue"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCount"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            android:text="@string/count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPrice" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCountValue"
            style="@style/Text.16sp.colorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.count}"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCount" />

        <View
            android:id="@+id/viewCount"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorText"
            android:layout_marginStart="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen8dp"
            android:layout_marginEnd="@dimen/dimen16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCountValue"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>